# catgo-LRG

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PRIVACY.md  README.md  citation.cff  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  readme.md  readme.zh.md  vite-plugin-agent-bridge.ts  vite.desktop.config.ts  vite.shared.ts  vitest.config.ts  wrangler.toml
crates/catgo-graph/: Cargo.toml
desktop/: App.svelte  PaneTree.svelte  Sidebar.svelte  (+8 more)
extensions/chgdiff-wasm/: Cargo.toml
extensions/rust/: Cargo.toml
extensions/rust/src/: bonding.rs  heterostructure.rs  nanoscroll.rs  slab.rs  structure.rs
extensions/rust/src/python/: surfaces.rs
extensions/rust/tests/: heterostructure_compat.rs
server/: README-pypi.md  catgo_server.spec  main.py  pyproject.toml  requirements.txt
server/catgo/: campaign_cli.py  cors_util.py  io_safe.py  setup_claude.py
server/catgo/cli/: __init__.py  _autostart.py  _legacy.py  campaign_cmd.py  freq_inputs_cmd.py  ops.py  ops_build.py  server_link.py  vib.py  view_cmd.py
server/catgo/mcp_tools/: helpers.py  plugin_tools.py  server_claude_code.py  structure_tools.py  workflow_tools.py
server/catgo/mcp_tools/tools/: misc.py  nanotube_moire.py  structure.py
server/catgo/models/: hpc.py  mofdb.py  nanoparticle.py  reticular.py  workflow_run.py
server/catgo/routers/: __init__.py  build.py  campaign.py  chat.py  chgcar.py  cohp.py  cube.py  dos.py  heterostructure.py  hpc.py  materials_project.py  mcp_http.py  mcp_sse.py  md_density.py  md_utils.py  mofdb.py  optimade.py  orca.py  pty.py  pubchem.py  reticular.py  skills.py  structure_ops.py  stt.py  system.py  terminal_bridge.py  trajectory_stream.py  view_capture.py  view_state.py  workflow.py  workflow_engine_tasks.py
server/catgo/stt/: __init__.py  accel.py  engine_state.py
server/catgo/tool_schema/: building.json
server/catgo/utils/: ase_db.py  connection_pool.py  heterostructure_algorithm.py  hpc_connection.py  job_parser.py  local_connection.py  mofdb_search.py  orca_input.py  reticular_algorithm.py  ssh_file_ops.py  vasp_input.py
server/catgo/workflow/: builtins_impl.py  config.py  db.py  graph_converter.py  mcp_tools.py  task_ids.py  v1_compat.py
server/catgo/workflow/engine/: advancer.py  batch_submitter.py  engine_builtins.py  hpc_utils.py  job_script.py  lifecycle.py  scanner.py  submitter.py  v1_monitor.py
server/catgo/workflow/skills/: SKILL.md
server/catgo/workflow/skills/backend_doctor/: SKILL.md
server/catgo/workflow/skills/campaign/: SKILL.md
server/catgo/workflow/skills/campaign/references/: catgo-cli.md
server/catgo/workflow/skills/campaign/scripts/: INDEX.md  aggregate.py  archive.py  campaign_analysis.py  campaign_lib.py  campaign_lit.py  campaign_report.py  fetch_ref.py  ingest_lit.py  make_report.py  new_campaign.py  poll.py  submit_calc.py  test_campaign_analysis.py  test_campaign_lib.py  test_campaign_lit.py  test_campaign_report.py  test_entrypoints.py  test_skill_structure.py  test_vasp_sanity.py  vasp_sanity.py
server/catgo/workflow/skills/catgo-campaign/: SKILL.md
server/catgo/workflow/skills/catgo-campaign-conventions/: SKILL.md
server/catgo/workflow/skills/catgo-campaign-loop/: SKILL.md
server/catgo/workflow/skills/catgo-gibbs-pipeline/: SKILL.md
server/catgo/workflow/skills/catgo-gibbs-pipeline/examples/: orr-pt111.md
server/catgo/workflow/skills/catgo-gibbs-pipeline/references/: method.md
server/catgo/workflow/skills/catgo-gibbs-pipeline/scripts/: build_freq_inputs.py
server/catgo/workflow/skills/troubleshooting/: SKILL.md
server/data/: adsorbates.json
server/tests/: test_active_db_persistence.py  test_adsorbate_tagging.py  test_analysis_node_wiring.py  test_analysis_produces_results.py  test_campaign_cli.py  test_campaign_mcp.py  test_campaign_router.py  test_chat_ollama.py  test_cors_util.py  test_engine_merge.py  test_engine_tasks_api_node_id.py  test_freq_adsorbate_freeze.py  test_graph_converter_ids.py  test_io_safe.py  test_local_connection_input.py  test_mcp_tools_node_id.py  test_mofdb.py  test_optimade_response_fields.py  test_pbs_run_config.py  test_potcar_root_resolution.py  test_procar_parser.py  test_push_intent.py  test_recipe_freq_freeze.py  test_remote_pty_binary.py  test_reset_clears_job.py  test_reticular.py  test_run_workflow_reconcile.py  test_runconfig_potcar_root.py  test_setup_claude.py  test_slab_gen_locked.py  test_slab_orthogonalize.py  test_spa_fallback_route_order.py  test_structure_dict_disordered.py  test_stt_accel.py  test_stt_accel_api.py  test_stt_engine_state.py  test_task_id_namespacing.py  test_terminal_bridge.py  test_terminal_mcp.py  test_v1_monitor_denamespace.py  (+3 more)
server/tests/cli/: test_argparse.py  test_campaign_cmd.py  test_freq_inputs_cmd.py  test_server_link.py  test_shell.py  test_vib.py
server/workflow/: node_sets.py
server/workflow/engines/: analysis.py  cp2k.py  local.py  mlp.py  orca.py  vasp.py
src-tauri/: .gitignore  Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json  updater.json
src-tauri/plugins/tauri-plugin-bg-grace/: .gitignore  Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-bg-grace/ios/: Package.swift
src-tauri/plugins/tauri-plugin-bg-grace/ios/Sources/: BgGracePlugin.swift
src-tauri/plugins/tauri-plugin-bg-grace/permissions/: default.toml
src-tauri/plugins/tauri-plugin-bg-grace/src/: lib.rs
src-tauri/plugins/tauri-plugin-ios-speech/: .gitignore  Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-ios-speech/ios/: Package.swift
src-tauri/plugins/tauri-plugin-ios-speech/ios/Sources/: SpeechPlugin.swift
src-tauri/plugins/tauri-plugin-ios-speech/permissions/: default.toml
src-tauri/plugins/tauri-plugin-ios-speech/src/: lib.rs
src-tauri/src/: lib.rs
src-tauri/src/db/: mod.rs
src-tauri/src/ssh/: auth.rs  exec.rs  handler.rs  keygen.rs  mod.rs  otp.rs  pty.rs  sftp.rs  state.rs
src-tauri/windows/: installer-hooks.nsh
tools/cube-processor/: Cargo.toml
(+627 files in other folders)
