[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catgo-engine"
version = "0.1.0"
description = "CatGo — Computational Chemistry Workflow Engine with MCP integration"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "CatGo Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "asyncssh>=2.14.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "ase>=3.22.0",
    "pymatgen>=2024.1.0",
    "networkx>=2.8",
]

[project.optional-dependencies]
full = [
    "mdtraj>=1.9.9",
    "h5py>=3.0.0",
    "scikit-learn>=1.3.0",
    "custodian>=2024.1.0",
]
ml = [
    "mace-torch>=0.3.0",
]
analyze = [
    "matplotlib>=3.8",
    "scienceplots>=2.1",
    "pylustrator>=1.3",
]
mofsearch = [
    "mofdb-client>=0.10.0",
]

[project.scripts]
catgo = "catgo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["catgo"]
