[package]
name = "catgo"
version = "1.1.4"
description = "Interactive visualizations for materials science"
authors = ["LRG <gul026@ucsd.edu>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/Hello-QM/catgo-LRG"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
url = "2"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "6"
catgo-graph = { path = "../crates/catgo-graph" }
tokio = { version = "1", features = ["rt", "sync", "time", "net", "io-util", "macros", "rt-multi-thread"] }
tokio-util = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

# Desktop-only deps. Must NOT be pulled in on mobile, where they do not build /
# are not used:
#   - portable-pty: backs the local in-app terminal on Windows/Linux/macOS.
#     Mobile gets its terminal from the future russh layer instead.
#   - tauri-plugin-single-instance: forwards the file-association launch argv to
#     the running instance (macOS uses RunEvent::Opened, but the crate is still
#     desktop-only).
#
# NB: Cargo evaluates `[target.'cfg(...)']` predicates BEFORE the build script
# runs, using only the real target spec — so the `cfg(desktop)`/`cfg(mobile)`
# aliases that tauri-build injects via rustc are NOT visible here and would make
# this section match nothing. We therefore spell "desktop" out as the equivalent
# real-target predicate. The `#[cfg(desktop)]` alias is still used inside the
# Rust source (lib.rs / pty.rs), where it IS available at compile time.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
portable-pty = "0.9"
tauri-plugin-single-instance = "2"
