[package]
name = "catgo"
version = "1.2.1"
description = "Interactive visualizations for materials science"
authors = ["LRG <gul026@ucsd.edu>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/Hello-QM/catgo-LRG"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
# Opens external URLs in the system browser on every platform incl. iOS/Android.
# shell.open is desktop-only (shells out to `open`/`xdg-open`) and silently
# no-ops on mobile, so external links never opened on the phone. Used by the
# global external-link handler (src/lib/io/external-links.ts).
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
url = "2"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "6"
catgo-graph = { path = "../crates/catgo-graph" }
tokio = { version = "1", features = ["rt", "sync", "time", "net", "io-util", "macros", "rt-multi-thread"] }
tokio-util = "0.7"

# ── SSH foundation (mobile HPC transport) ────────────────────────────────────
# russh is the future mobile SSH transport but is NOT cfg-gated: it compiles on
# every target (including desktop) so the ssh module can be validated on desktop.
#
# Version pin rationale (from the russh API spike):
#   * `cargo add russh` silently resolves to 0.54.5 under this crate's
#     `rust-version = "1.77.2"` pin (russh 0.61.1 needs rustc 1.85). We pin
#     `=0.54.5` explicitly to keep the build reproducible under 1.77.2 and to
#     stay within the existing MSRV instead of bumping it.
#   * russh 0.54.6 is BROKEN (yanked transitive dep `libcrux-ml-kem 0.0.3`) —
#     the `=` pin guarantees we never float onto it.
#   * `russh-keys` standalone is OBSOLETE (latest 0.49.2 is incompatible with
#     russh 0.54+). Keys live at `russh::keys::*` (always compiled, no feature
#     gate), so we add only `russh` — never `russh-keys`.
#   * The Handler trait uses native `async fn` (RPITIT) — no `async-trait`.
russh = "=0.54.5"
# Independent crate (still separate from russh); used by the future SFTP layer.
russh-sftp = "2.3.0"
# gzip/deflate helper for the future compressed file-transfer path.
flate2 = "1"
# SSH-key passwordless-login at-rest protection. `getrandom` seeds the on-device
# ed25519 keygen + the AES-GCM data key; `aes-gcm` wraps the private key at rest
# (software fallback — the Android Keystore hardening is documented in
# deploy/android/README.md). Both already resolve in the tree (no new lock churn).
getrandom = "0.2"
aes-gcm = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

# Desktop-only deps. Must NOT be pulled in on mobile, where they do not build /
# are not used:
#   - portable-pty: backs the local in-app terminal on Windows/Linux/macOS.
#     Mobile gets its terminal from the future russh layer instead.
#   - tauri-plugin-single-instance: forwards the file-association launch argv to
#     the running instance (macOS uses RunEvent::Opened, but the crate is still
#     desktop-only).
#
# NB: Cargo evaluates `[target.'cfg(...)']` predicates BEFORE the build script
# runs, using only the real target spec — so the `cfg(desktop)`/`cfg(mobile)`
# aliases that tauri-build injects via rustc are NOT visible here and would make
# this section match nothing. We therefore spell "desktop" out as the equivalent
# real-target predicate. The `#[cfg(desktop)]` alias is still used inside the
# Rust source (lib.rs / pty.rs), where it IS available at compile time.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
portable-pty = "0.9"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "ios")'.dependencies]
tauri-plugin-bg-grace = { path = "plugins/tauri-plugin-bg-grace" }
tauri-plugin-ios-speech = { path = "plugins/tauri-plugin-ios-speech" }
