[package]
name = "chgdiff-wasm"
version = "0.1.0"
edition = "2021"
description = "VASP CHGCAR difference charge density — compiled to WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
