[package]
name = "chgdiff-wasm"
version = "0.1.0"
edition = "2021"
description = "VASP CHGCAR difference charge density — compiled to WebAssembly"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
